# ENPM808X_Midterm_Project

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  readme.md  requirements.sh
AgileDocuments/: AIP.xlsx
Proposal_docs/: Phase0_Presentation.pptx
app/: ACME_robot.cpp  CMakeLists.txt  Detection_module.cpp  Tracking_module.cpp  Transformation_module.cpp  a.out  main.cpp
docs/html/: ____init_____8py_source.html  _a_c_m_e__robot_8cpp.html  _a_c_m_e__robot_8cpp__incl.map  _a_c_m_e__robot_8cpp__incl.md5  _a_c_m_e__robot_8cpp_source.html  _a_c_m_e__robot_8hpp_source.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _detection__module_8cpp.html  _detection__module_8cpp__incl.map  _detection__module_8cpp__incl.md5  _detection__module_8cpp_source.html  _detection__module_8hpp.html  _detection__module_8hpp__dep__incl.map  _detection__module_8hpp__dep__incl.md5  _detection__module_8hpp__incl.map  _detection__module_8hpp__incl.md5  _detection__module_8hpp_source.html  _tracking__module_8cpp.html  _tracking__module_8cpp__incl.map  _tracking__module_8cpp__incl.md5  _tracking__module_8cpp_source.html  _tracking__module_8hpp_source.html  _transformation__module_8cpp.html  _transformation__module_8cpp__incl.map  _transformation__module_8cpp__incl.md5  _transformation__module_8cpp_source.html  _transformation__module_8hpp_source.html  annotated.html  (+1764 more)
include/: ACME_robot.hpp  Detection_module.hpp  Tracking_module.hpp  Transformation_module.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  test.cpp
(+120 files in other folders)
